# dvinanews

./: .env.example  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml
src/: alembic.ini  main.py
src/application/common/: client.py  parser.py
src/application/services/: user.py
src/application/usecases/commands/: __init__.py  get_news.py  send_message.py
src/application/usecases/users/: __init__.py  get_user.py  update_user.py
src/domain/common/: news.py  role.py
src/domain/users/: repository.py  user.py
src/infrastructure/: config.py
src/infrastructure/di/: container.py
src/infrastructure/persistence/migrations/versions/: 2024_07_02_1625-fafbc6eb16cb_.py
src/infrastructure/persistence/models/: user.py
src/infrastructure/persistence/repositories/: user.py
src/infrastructure/smtp/: main.py
src/infrastructure/tasks/: last_post_date.pkl  main.py  send_news.py
src/presentation/common/: keyboards.py  texts.py
src/presentation/middlewares/: admin.py
src/presentation/routers/: admin.py  announcement.py  news.py
