[tool.poetry]
name = "dvinanews-bot"
version = "0.1.0"
description = ""
authors = ["vedaka1 <vladik.kuleshov.2003@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.8.0"
sqlalchemy = "^2.0.31"
dishka = "^1.2.0"
alembic = "^1.13.2"
pydantic-settings = "^2.3.4"
bs4 = "^0.0.2"
asyncpg = "^0.29.0"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
